--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				<!-- Header -->
 					<header id="header">
 						<h1>Joshua de Souza</h1>
-						<p> Healthcare innovator and engineer <a href="http://html5up.net">HTML5 UP</a></p>
+						<p> Healthcare innovator and engineer</p>
 						<ul class="icons">
 							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
