--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				<!-- Thumbnail -->
 					<section id="thumbnails">
 						<article>
-							<a class="thumbnail" href="images/fulls/01.jpg" data-position="left center"><img src="images/thumbs/01.jpg" alt="" /></a>
+							<a class="thumbnail" href="images/fulls/01.jpg" data-position="left center"><img src="images/thumbs/cataract surgery dalle.png" alt="" /></a>
 							<h2>Innovations in cataract surgery - Enabling affordable and accessible high quality cataract surgery outcomes for all</h2>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 						</article>
