--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 					<section id="thumbnails">
 						<article>
 							<a class="thumbnail" href="images/fulls/01.jpg" data-position="left center"><img src="images/thumbs/cataract surgery dalle.png" alt="" /></a>
-							<h2>Innovations in cataract surgery - Enabling affordable and accessible high quality cataract surgery outcomes for all</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+							<h2>Innovations in cataract surgery</h2>
+							<p>- Enabling affordable and accessible high quality cataract surgery outcomes for all</p>
 						</article>
 						<article>
 							<a class="thumbnail" href="images/fulls/02.jpg"><img src="images/thumbs/02.jpg" alt="" /></a>
