--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				<!-- Thumbnail -->
 					<section id="thumbnails">
 						<article>
-							<a class="thumbnail" href="images/fulls/01.jpg" data-position="left center"><img src="images/thumbs/cataract surgery dalle.png" alt="" /></a>
+							<a class="thumbnail" href="images/fulls/01.jpg" data-position="left center"><img src="images/thumbs/cataract_surgery_dalle.png" alt="" /></a>
 							<h2>Innovations in cataract surgery</h2>
 							<p>- Enabling affordable and accessible high quality cataract surgery outcomes for all</p>
 						</article>
