--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
 						<ul class="icons">
 							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
 							<li><a href="desouzajoshua00@gmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
 							<li><a href="https://www.linkedin.com/in/jj-ds/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 						</ul>
@@ -28,7 +27,7 @@
 				<!-- Thumbnail -->
 					<section id="thumbnails">
 						<article>
-							<a class="thumbnail" href="images/fulls/01.jpg" data-position="left center"><img src="images/thumbs/cataract_surgery_dalle.png" alt="" /></a>
+							<a class="thumbnail" href="images/thumbs/cataract_surgery_dalle.png" data-position="left center"><img src="images/thumbs/cataract_surgery_dalle.png" alt="" /></a>
 							<h2>Innovations in cataract surgery</h2>
 							<p>- Enabling affordable and accessible high quality cataract surgery outcomes for all</p>
 						</article>
